<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MusicianDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_gravity="center"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/artist_detail_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background"
                android:contentDescription="Artist Image"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/artist_name_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Artist Detail"
            android:textSize="@dimen/_25ssp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/artist_birthdate_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Birthdate"
            android:textSize="@dimen/_12sdp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/artist_description_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/artist_detail_description"
            android:justificationMode="inter_word"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>