<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MusicianListFragment">

    <TextView
        android:id="@+id/artists_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="Artistas"
        android:gravity="center"
        android:textSize="@dimen/_20sdp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_view_musicians"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/artists_title"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:scrollbars="none"/>

</androidx.constraintlayout.widget.ConstraintLayout>