...
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_header">

                <LinearLayout
                    android:id="@+id/artists_button"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/linear_header">

...
